--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/fetch_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/fetch_fields.html
@@ -11,23 +11,22 @@
 
 <!-- <type 'unicode'> -->
 <div style="display:table-cell;">
-  <font size="3"> <input type="textbox" name="{{fields_name}}" value="{{fields_value|join:', '|default_if_none:''}}" placeholder="{{each.help_text}}"  ></font>
+  <font size="3">  <input type="textbox" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}" placeholder="{{each.help_text}}"  ></font>
 </div>
 
 {% endif %}
   
 {% if gs_type == 'attribute_set' %}
-
       {% if fields_type == "bool" %}
-      <select id="id_auto_now_add" name="{{fields_name}}" style="width:50%">
+      <select id="id_auto_now_add" name="{{fields_name}}" style="width:50%" >
         <option value="0">{% trans "Unknown" %}</option>
-        <option value="1" {% if fields_value == 1 %}selected{% endif %} >{% trans "Yes" %}</option>
-        <option value="2" {% if fields_value == 2 %}selected{% endif %} >{% trans "No" %}</option>
+        <option value="1" {% if fields_value == "1" %}selected{% endif %} >{% trans "Yes" %}</option>
+        <option value="2" {% if fields_value == "2" %}selected{% endif %} >{% trans "No" %}</option>
       </select>
 
       <div class="medium-3 columns end">
       {% elif fields_type == "datetime.datetime" %}
-      <input type="text" id="{{fields_name}}" name="{{fields_name}}" >
+      <input type="text" id="{{fields_name}}" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}" {% if fields_value %} selected {% endif %} > 
 
       <script>
       $(function() {
@@ -44,7 +43,7 @@
 
       {% elif fields_type == "int" or fields_type == "float" or fields_type == "long" %}
       <div style="display:table-cell;">
-        <font size="3"> <input type="" name="{{fields_name}}" placeholder="{{help_text}}" ></font>
+        <font size="3"> <input type="" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}" placeholder="{{help_text}}" ></font>
       </div>
 
       {% elif fields_type == "list" %}
@@ -62,7 +61,7 @@
         <select name="{{fields_name}}">
           <option value="">select</option>
           {% for value in complex_dt %}
-          <option value="{{value}}"> {{value}} </option>
+          <option value="{{value}}" {% if value == fields_value %} selected {% endif %} > {{value}} </option>
           {% endfor %}
         </select>
       </div>
@@ -85,7 +84,7 @@
         <input type="text" id="uploadFile_{{field.name}}" value="" placeholder="Choose {{field.altnames|lower}}" disabled="disabled" style="float:left; width:18rem; margin-right:0.5rem;" {% if is_required_field %}required{% endif %} />
         <div href="#" class="fileUpload button tiny round" style="margin-top:2px;">
             <span>{% trans "Upload" %}</span>
-            <input id="uploadBtn_{{field.name}}" type="file" name="{{field.name}}" class="upload" {% if is_required_field %}required{% endif %} />
+            <input id="uploadBtn_{{field.name}}" type="file" name="{{field.name}}" class="upload" {% if is_required_field %}required{% endif %} value="{{fields_value|default_if_none:''}}"/>
         </div>
         {% if is_required_field %}
         <i style="color:red; float:left display:inline">*</i>
@@ -98,11 +97,8 @@
         });
       </script>
 
-
       {% elif fields_type == "unicode" or fields_type == "basestring" %}
-
         {% if fields_name == "Location" %}
-
           <div class="row">
             <div class="large-8 columns">
                 <a href="#view-map-edit-widget" data-reveal-id="view-map-edit-widget" title="Click to add location markers" class="tiny secondary button radius expand">
@@ -161,16 +157,16 @@
           </script>
 
         {% else %}
-        <input type="text" id="{{fields_name}}" name="{{fields_name}}" placeholder="{{help_text}}"  />
+        <input type="text" id="{{fields_name}}" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}" placeholder="{{help_text}}"  />
         
         {% endif %}
 
   {% endif %}
-{% elif gs_type == 'relation_set' %}
+{% elif gs_type == 'relation_set' %}  
     <select name="{{fields_name}}">
     <option value="">select</option>
     {% for value in fields_object_type %}
-    <option value="{{value}}"> {{value}} </option>
+    <option value="{{value}}" {% if value == fields_value %}selected{% endif %} > {{value}} </option>
     {% endfor %}
     </select>
 {% endif %}
