script tag for jquery added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_dependency.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_dependency.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="/static/ndf/bower_components/d3/d3.min.js"></script> <!-- checked -->
   <script type="text/javascript" src="/static/ndf/bower_components/underscore/underscore.js"></script> <!-- checked -->
   <script sync="text/javascript" src="/static/ndf/bower_components/FileSaver/FileSaver.js"></script> <!-- checked -->
+  <script src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>	
   
 {% endblock %}
 
