--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_collection.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_collection.html
@@ -5,6 +5,7 @@
 
 {% block head %}
 
+<script src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>	
   <!-- Scripts required for D3 graph -->
   <script type="text/javascript" src="/static/ndf/bower_components/d3/d3.min.js"></script> <!-- checked -->
   <script type="text/javascript" src="/static/ndf/bower_components/underscore/underscore.js"></script> <!-- checked -->
