--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/drawer_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/drawer_widget.html
@@ -11,6 +11,28 @@
     border: 5px solid gray;
     margin: 0; 
   }
+  .selected-resource { background-color:lightgray !important ; }
+  .resource-drawer {
+  border-color: #D3D3D3; border-style: solid;
+  padding: 0 !important;
+  overflow-y: auto;
+  }
+
+  .resource_exists{
+  background-color: red !important;
+  }
+
+  .resource-drawer li.bullet-item:hover{
+  background-color: #ecf0f1; cursor:pointer;
+  }
+
+
+  .resource-type-image {
+  height:40px;
+  background-repeat:no-repeat; background-size: 48px 48px
+  }
+
+
 </style>
 <div>
 
@@ -342,8 +364,10 @@
   //To allocate space of 10 resources listing for drawers.
   liHeight = $("#{{widget_for}}_drawer1 > li").outerHeight();
   $(".resource-drawer").height(430);
+
   // To select the single as well as multiple items from list
   $(document).on('click','#{{widget_for}}_drawer1 li.bullet-item',function(e){
+
     // $("#{{widget_for}}_drawer1 li.bullet-item").on("click", function(e) {
     if (e.ctrlKey) {
       $(this).toggleClass('selected-resource');
