Changes to add view and add new GSystem

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_class.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_class.html
@@ -18,7 +18,12 @@
 		{% ifequal class_name each %}
 		<li class="active"> <a href="/admin/designer/{{each}}" style="float:left">{{each}} ({{count}})</a><a href="/admin/designer/{{each}}/create/">&nbsp;+</a></li>
 		{% else %}
-		<li > <a href="/admin/designer/{{each}}" style="float:left">{{each}} ({{count}})</a><a href="/admin/designer/{{each}}/create/">&nbsp;+</a></li>
+			{% if each == "GSystem" %}
+			<li> <a href="/admin/designer/{{each}}" style="float:left" >{{each}}  ({{count}})</a><a href="/home/type_created">&nbsp;+</a>
+			</li>
+			{% else %}
+			<li > <a href="/admin/designer/{{each}}" style="float:left">{{each}}  ({{count}})</a><a href="/admin/designer/{{each}}/create/">&nbsp;+</a></li>
+			{% endif %}
 		{% endifequal %}
 	{% endfor %}	
 </ul>
