Updated css files

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -2485,7 +2485,7 @@ $course-envelop-color: #fff;
   }
 }
 
-  .notifications-tabs{
+  .notifications-analytics-tabs{
     .tabs {
       width: 100%;
       margin: 0em 0em 0.5em;
