--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
@@ -25680,13 +25680,13 @@ div.show-image:hover div.fullscreen-icon{
 }
 
 /* line 2489, ../../../scss/_app_styles.scss */
-.notifications-tabs .tabs {
+.notifications-analytics-tabs .tabs {
   width: 100%;
   margin: 0em 0em 0.5em;
   border-bottom: 1px solid #CCC;
 }
 /* line 2494, ../../../scss/_app_styles.scss */
-.notifications-tabs .tabs .tab-title {
+.notifications-analytics-tabs .tabs .tab-title {
   width: 40%;
   background-color: #DEDEDE;
   margin-left: 1em;
@@ -25695,7 +25695,7 @@ div.show-image:hover div.fullscreen-icon{
   text-transform: uppercase;
 }
 /* line 2502, ../../../scss/_app_styles.scss */
-.notifications-tabs .tabs .tab-title.active {
+.notifications-analytics-tabs .tabs .tab-title.active {
   background-color: #fff;
   border: 1px solid #CCC;
   border-bottom: 0px;
