Display username in overlay from group admin analytics

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -112,6 +112,7 @@
             {% endcomment %}
           </div>
         </div>
+        <small>* Click on the student's name to view detailed analytics.</small>
         <div class="row students-tabular-data">
           <div class="small-12 columns">
             <table class="student-overview-table">
