--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -15,8 +15,9 @@
 <div class="pre-analytics-msg-div text-center hide">
     Your analytics is loading. Please wait.
 </div>
-
-
+<div class="row">
+  <h3>Analytics of user '{{username}}'</h3>
+</div>
 <div class="course-overview-container">
 
   <div class="row collapse course-overview">
