center align for iages in gallery

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -12,6 +12,9 @@
     .lbl_of_tag{
         background-color: gold !important;
     }
+    .show-image{
+        margin-left:100px!important;
+    }   
 </style>
 <!--<style type="text/css">
     .gmodal-item-panel .text-gray{
@@ -61,10 +64,10 @@
         </div>
     </div-->
     <div class="row gmodal-body">
-        <div class="small-8 columns gmodal-item-panel">
+        <div class="small-8 columns gmodal-item-panel ">
             <!-- Detail view section -->
             {% include 'ndf/node_ajax_content.html' with no_discussion=True %}
-
+        
         </div>
             {% comment %}
             <div class="row gmodal-footer">
