--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -2,6 +2,13 @@
 {% block head %}
   <script src="/static/ndf/bower_components/pace/pace.js"></script>
   <link href="/static/ndf/bower_components/pace/themes/blue/pace-theme-loading-bar.css" rel="stylesheet" />
+
+  <!-- DataTables -->
+  <script src="/static/ndf/bower_components/DataTables/media/js/jquery.dataTables.js"></script>
+  <script src="/static/ndf/bower_components/datatables-plugins/integration/foundation/dataTables.foundation.js"></script>
+  <!-- DataTables CSS -->
+  <link href="/static/ndf/bower_components/datatables-plugins/integration/foundation/dataTables.foundation.css" rel="stylesheet" type="text/css" />
+
 <style type="text/css">
 
   .short-text {
@@ -25,6 +32,7 @@
 {% endblock %}
 
 <script src="/static/ndf/bower_components/d3/d3.js"></script>
+<input type="hidden" class="admin_analytics_fetched" value="False">
 
 <div id="course-about">
 <div class="row">
@@ -95,32 +103,19 @@
                       Points table for students
                     </div>
                     <div class="small-12 medium-8 columns students-table-legends">
-                      <span class=" badge yellow">&nbsp;</span>
-                      <span>Interations</span>
                       <span class=" badge green">&nbsp;</span>
                       <span>Gallery uploads</span>
                       <span class=" badge">&nbsp;</span>
                       <span>Note Making</span>
-                      {% comment %}
                       <span class=" badge red">&nbsp;</span>
                       <span>Quiz Performance</span>
-                      {% endcomment %}
+                      <span class=" badge yellow">&nbsp;</span>
+                      <span>Interactions</span>
                     </div>
                   </div>
                   <small>* Click on the student's name to view detailed analytics.</small>
                   <div class="row students-tabular-data">
-                    <div class="small-12 columns">
-                      <table class="student-overview-table">
-                        <thead>
-                          <tr>
-                            <th>Student Name</th>
-                            <th>Total Points</th>
-                            <th colspan=4>Points Breakup</th>
-                          </tr>
-                        </thead>
-                        <tbody id="students-points-table-tbody">
-                        </tbody>
-                      </table>
+                    <div class="small-12 columns table-container">
                     </div>
                   </div>
                 </div>
@@ -129,7 +124,6 @@
                   <div class="userAnalyticsData"></div>
                   <a class="close-reveal-modal">&#215;</a>
                 </div>
-
               {% endif %}
 
             </section>
@@ -191,8 +185,9 @@
 
     // Admin analytics view
     $(document).on('click','.fetch-group-analytics',function(){
+      if($(".admin_analytics_fetched").val() == "False"){
         // $(".fetch-group-analytics").addClass("hide")
-        // $(".pre-analytics-msg-div").removeClass("hide")
+        $(".pre-analytics-msg-div").removeClass("hide")
         $.ajax({
             url: "{% url 'course_analytics_admin' group_id %}",
 
@@ -201,31 +196,41 @@
             dataType: "html",
             global: false,
             success: function(data){
+              $(".admin_analytics_fetched").attr('value', "True");
               data = JSON.parse(data)
-                // console.log(data)
-              var students_points_table = document.getElementById("students-points-table-tbody");
-              $.each(data, function(index){
-                  each_student_dict = data[index]
-                  var row = students_points_table.insertRow(-1);
-                  var cell1 = row.insertCell(0);
-                  cell1.className = "fetch-analytics"
-                  cell1.setAttribute("data-id",each_student_dict["user_id"])
-                  var cell2 = row.insertCell(1);
-                  var cell3 = row.insertCell(2);
-                  var cell4 = row.insertCell(3);
-                  var cell5 = row.insertCell(4);
+              column_headers = data["column_headers"];
+              students_data_set = data["students_data_set"];
+              dataTable_columns_set = [];
 
-                  cell1.innerHTML = "<span>"+each_student_dict['username']+"</span>";
-                  cell2.innerHTML = each_student_dict['users_points'];
-                  cell3.innerHTML = generate_points_bar(each_student_dict['users_points_breakup']['Interactions'], "Interactions",each_student_dict['users_points'])
-                  cell4.innerHTML = generate_points_bar(each_student_dict['users_points_breakup']['Files'], "Files",each_student_dict['users_points'])
-                  cell5.innerHTML = generate_points_bar(each_student_dict['users_points_breakup']['Notes'], "Notes",each_student_dict['users_points'])
-              })
+              var students_points_table = '<table cellpadding="0" cellspacing="0" border="0" class="display" id="students-points-table-tbody">' + '</table>';
+              $(".table-container").html(students_points_table)
+              // Prepare title & data headers used in dataTable
+              $.each(column_headers, function(index, v) {
+                d = {};
+                d["data"] = v[0];
+                d["title"] = v[1];
+                dataTable_columns_set.push(d);
+              });
+              // Set defintion dataTable
+              sce_dt_var = $("#students-points-table-tbody").dataTable({
+                "data": students_data_set,
+                "columns": dataTable_columns_set,
+                "createdRow": function ( row, data, index ) {
+                  user_id = data["user_id"];
+                  $(row).attr("data-id", user_id);
+                  $(row).addClass("fetch-analytics")
+                  $(row).find("td:nth-child(3)").html(generate_points_bar(data['files_points'], "Files",data['users_points']));
+                  $(row).find("td:nth-child(4)").html(generate_points_bar(data['notes_points'], "Notes",data['users_points']));
+                  $(row).find("td:nth-child(5)").html(generate_points_bar(data['quiz_points'], "Quiz",data['users_points']));
+                  $(row).find("td:nth-child(6)").html(generate_points_bar(data['interactions_points'], "Interactions",data['users_points']));
 
-                $(".group-analytics").removeClass("hide")
-                $(".pre-analytics-msg-div").addClass("hide")
+                }
+              });
+              $(".group-analytics").removeClass("hide")
+              $(".pre-analytics-msg-div").addClass("hide")
             },
         });//end of ajax
+      }
     })
 
     // Admin analytics view. Score-points in horizontal bars of enrolled students
@@ -245,6 +250,10 @@
         else if(bar_name == "Notes"){
           bg_color_val = "#9ec4fa"
         }
+        else if(bar_name == "Quiz"){
+          bg_color_val = "#fa623f"
+        }
+        
         span_ele.style.backgroundColor = bg_color_val
         var inner_span_ele = document.createElement("span")
         inner_span_ele.className = "pull-left merter-val"
