--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_class.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_class.html
@@ -16,13 +16,18 @@
 	{% for each in class_list %}
 		{% get_Object_count each as count %}
 		{% ifequal class_name each %}
-		<li class="active"> <a href="/admin/designer/{{each}}" style="float:left">{{each}} ({{count}})</a><a href="/admin/designer/{{each}}/create/">&nbsp;+</a></li>
+			{% if each == "GSystem" %}
+				<li> <a href="/admin/designer/{{each}}" style="float:left" >{{each}}  ({{count}})</a><a href="/home/type_created">&nbsp;+</a>
+			</li>
+			{% else %}
+				<li class="active"> <a href="/admin/designer/{{each}}" style="float:left">{{each}} ({{count}})</a><a href="/admin/designer/{{each}}/create/">&nbsp;+</a></li>
+			{% endif %}
 		{% else %}
 			{% if each == "GSystem" %}
 			<li> <a href="/admin/designer/{{each}}" style="float:left" >{{each}}  ({{count}})</a><a href="/home/type_created">&nbsp;+</a>
 			</li>
 			{% else %}
-			<li > <a href="/admin/designer/{{each}}" style="float:left">{{each}}  ({{count}})</a><a href="/admin/designer/{{each}}/create/">&nbsp;+</a></li>
+			<li > <a href="/admin/designer/{{each}}" style="float:left">{{each}}  ({{count}})</a><a href="/home/type_created">&nbsp;+</a></li>
 			{% endif %}
 		{% endifequal %}
 	{% endfor %}	
